Remove hardcoded database credentials from docker-compose.prod.yml

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ PORT=3000
 # Database
 DATABASE_URL="postgresql://tripmate_user:tripmate_password@localhost:5432/tripmate_db?schema=public"
 
+POSTGRES_USER=tripmate_user
+POSTGRES_PASSWORD=tripmate_password
+POSTGRES_DB=tripmate_db
+
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 JWT_REFRESH_SECRET="your-super-secret-refresh-key-change-this-in-production"
