--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
       - "3000:3000"
     environment:
       NODE_ENV: production
-      DATABASE_URL: "postgresql://tripmate_user:tripmate_password@postgres:5432/tripmate_db?schema=public"
+      DATABASE_URL: ${DATABASE_URL}
       JWT_SECRET: ${JWT_SECRET}
       JWT_REFRESH_SECRET: ${JWT_REFRESH_SECRET}
     depends_on:
@@ -23,9 +23,9 @@ services:
     container_name: tripmate_postgres_prod
     restart: unless-stopped
     environment:
-      POSTGRES_USER: tripmate_user
-      POSTGRES_PASSWORD: tripmate_password
-      POSTGRES_DB: tripmate_db
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres_data_prod:/var/lib/postgresql/data
     networks:
