--- a/.gitignore
+++ b/.gitignore
@@ -1,87 +1,77 @@
-# compiled output
-/dist
-/node_modules
-/build
+# Node/NestJS/Prisma ignores
+node_modules/
+dist/
+build/
+coverage/
+.nyc_output/
+coverage.json
+coverage/
+test-results/
+
+# Environment files
+.env
+.env.*
+.envrc
+.env.*.local
+.env.test
+.env.production.local
+.env.local
+
+# Docker/test files
+docker-compose.test.yml
 
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 lerna-debug.log*
+
+# Editor/IDE
+.idea/
+.vscode/
+*.code-workspace
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
 # OS
 .DS_Store
 
 # Database
 postgres_data/
-
-# Tests
-/coverage
-/.nyc_output
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
-# temp directory
-.temp
-.tmp
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-/generated/prisma
-
-# Coverage output
-coverage.json
-
-# TypeScript build info
-*.tsbuildinfo
-
-# Vim swap files
-*.swp
-*.swo
-
-# SQLite DBs (if used)
 *.sqlite
 
-# Package tarballs
-*.tgz
+# Test artifacts
+test/
+tests/
+*.spec.ts
+*.test.ts
 
-# Editor swap/backup files
+# TypeScript
+*.tsbuildinfo
+
+# Vim/Emacs/other swap/backup
+*.swp
+*.swo
 *~
+*.bak
 
-# Optionally ignore all of generated/ if you do not want to track any generated code
-generated/
+# Misc
+.temp/
+.tmp/
+.cache/
+.eslintcache
+.prettiercache
 
-# Optionally ignore test outputs or snapshots if present in test/ or tests/ directories
+# Generated
+/generated/
+/generated/prisma/
+
+# API docs
+API_DOCUMENTATION.md
+
+# Snapshots (optional)
 # tests/**/*.snap
 # test/**/*.snap
