--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:cov": "jest --coverage",
     "test:cov:html": "jest --coverage --coverageReporters=html",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "npm run test:e2e:db && sleep 5 && npx prisma migrate deploy --schema=prisma/schema.prisma && npm run test:e2e:seed && jest --config ./test/jest-e2e.json --runInBand && npm run test:e2e:db:down",
+    "test:e2e:db": "docker-compose -f docker-compose.test.yml up -d",
+    "test:e2e:db:down": "docker-compose -f docker-compose.test.yml down -v",
+    "test:e2e:seed": "npx prisma db seed --schema=prisma/schema.prisma",
     "db:start": "docker-compose up -d",
     "db:stop": "docker-compose down",
     "db:reset": "docker-compose down -v && docker-compose up -d && sleep 5 && npm run prisma:migrate",
