--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,12 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Set up Docker Compose v2
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose-plugin
+          docker compose version
+
       - name: Wait for PostgreSQL
         run: |
           for i in {1..30}; do
