--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/src/main.js",
+    "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -36,7 +36,8 @@
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:reset": "prisma migrate reset --force",
     "build:prod": "npm run prisma:generate && npm run build",
-    "start:migrate:prod": "npm run prisma:migrate:deploy && npm run start:prod"
+    "start:migrate:prod": "npm run prisma:migrate:deploy && npm run start:prod",
+    "railway:start": "npm run build && npm run start:migrate:prod"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
