Worked on email verification and tests

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,27 @@
-
 # Application
 NODE_ENV=development
 PORT=3000
 
-# Database
-DATABASE_URL="postgresql://tripmate_user:tripmate_password@localhost:5432/tripmate_db?schema=public"
+# Database (Railway will provide these)
+DATABASE_URL="postgresql://postgres:password@localhost:5432/tripmate?schema=public"
+DIRECT_URL="postgresql://postgres:password@localhost:5432/tripmate?schema=public"
 
-POSTGRES_USER=tripmate_user
-POSTGRES_PASSWORD=tripmate_password
-POSTGRES_DB=tripmate_db
-
-# JWT
+# JWT (CHANGE THESE IN PRODUCTION!)
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 JWT_REFRESH_SECRET="your-super-secret-refresh-key-change-this-in-production"
 JWT_EXPIRES_IN="15m"
 JWT_REFRESH_EXPIRES_IN="7d"
 
-# API Settings
-API_PREFIX="api"
-SWAGGER_PATH="api/docs"
+# Email Configuration (Brevo)
+MAIL_HOST=smtp-relay.brevo.com
+MAIL_PORT=587
+MAIL_USER=your-email@gmail.com
+MAIL_PASS=xkeysib-your-brevo-smtp-key
+MAIL_FROM_NAME=TripMate
+MAIL_FROM_EMAIL=noreply@tripmate.com
+
+# Frontend URL (for CORS and email links)
+FRONTEND_URL=http://localhost:3000
 
 # CORS (comma-separated origins)
-CORS_ORIGINS="http://localhost:3001,http://localhost:5173"
+CORS_ORIGINS="http://localhost:3000,http://localhost:3001,http://localhost:5173"
