--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "prisma:reset": "prisma migrate reset --force",
     "build:prod": "npm run prisma:generate && npm run build",
     "start:migrate:prod": "npm run prisma:migrate:deploy && npm run start:prod",
-    "railway:start": "npm run build && npm run start:migrate:prod"
+    "railway:start": "npm run start:migrate:prod"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -54,6 +54,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -73,6 +74,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.16.5",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
