--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ master, main, release ]
 
+permissions:
+  contents: read
+  pull-requests: write
+  checks: write
+
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
