--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ master, main, release ]
 
+permissions:
+  contents: read
+  pull-requests: write
+  checks: write
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -21,12 +26,29 @@ jobs:
         options: >-
           --health-cmd="pg_isready -U postgres" --health-interval=10s --health-timeout=5s --health-retries=5
     env:
+      # Database
       DATABASE_URL: postgresql://postgres:mysecretpassword@localhost:5432/trip_mate
       DIRECT_URL: postgresql://postgres:mysecretpassword@localhost:5432/trip_mate
+      
+      # JWT Configuration
       JWT_SECRET: dummy_jwt_secret_for_ci
       JWT_REFRESH_SECRET: dummy_jwt_refresh_secret_for_ci
       JWT_EXPIRES_IN: 1h
       JWT_REFRESH_EXPIRES_IN: 7d
+      
+      # Email Configuration (for CI/testing)
+      MAIL_HOST: smtp.ethereal.email  # Using Ethereal for testing
+      MAIL_PORT: 587
+      MAIL_USER: dummy@ethereal.email
+      MAIL_PASS: dummy_password
+      MAIL_FROM_NAME: Trip Mate Test
+      MAIL_FROM_EMAIL: noreply@tripmate.test
+      
+      # Application
+      NODE_ENV: test
+      PORT: 3000
+      FRONTEND_URL: http://localhost:3000
+      
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -61,14 +83,47 @@ jobs:
       - name: Lint code
         run: npm run lint
 
+      # UPDATED: Add coverage reporters
       - name: Run unit & integration tests with coverage
-        run: npm run test:cov
+        run: npm run test:cov -- --coverageReporters=json-summary --coverageReporters=text --coverageReporters=lcov
 
       - name: Run e2e tests
         run: npm run test:e2e
 
       - name: Build project
         run: npm run build
+
+      - name: Create Coverage Comment
+        uses: actions/github-script@v7
+        if: github.event_name == 'pull_request'
+        continue-on-error: true
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            try {
+              const coverage = JSON.parse(fs.readFileSync('coverage/coverage-summary.json', 'utf8'));
+              const total = coverage.total;
+              
+              const comment = `## 📊 Coverage Report
+              
+              | Type | Coverage | Details |
+              |------|----------|---------|
+              | Lines | ${total.lines.pct}% | ${total.lines.covered}/${total.lines.total} |
+              | Statements | ${total.statements.pct}% | ${total.statements.covered}/${total.statements.total} |
+              | Functions | ${total.functions.pct}% | ${total.functions.covered}/${total.functions.total} |
+              | Branches | ${total.branches.pct}% | ${total.branches.covered}/${total.branches.total} |
+              `;
+              
+              github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: comment
+              });
+            } catch (error) {
+              console.error('Failed to create coverage comment:', error);
+            }
 
       # Upload coverage report as artifact
       - name: Upload coverage report
@@ -88,10 +143,4 @@ jobs:
           name: trip-mate-coverage
           fail_ci_if_error: false
 
-      # Optional: Add coverage comment to PR
-      - name: Jest Coverage Comment
-        uses: ArtiomTr/jest-coverage-report-action@v2
-        if: github.event_name == 'pull_request'
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          coverage-file: ./coverage/coverage-final.json
+      # REMOVED: The problematic Jest Coverage Comment action
